testsuite/tests/rep-poly/T20113.stderr

T20113.hs:7:35: error: [GHC-55287]
    • The newtype constructor pattern
      does not have a fixed runtime representation.
      Its type is:
        a :: TYPE rep
    • In the pattern: MkY {y_fld = y_fld}
      In an equation for ‘y_fld’: y_fld MkY {y_fld = y_fld} = y_fld

T20113.hs:7:35: error: [GHC-55287]
    The first pattern in the equation for ‘y_fld’
    does not have a fixed runtime representation.
    Its type is:
      Y a :: TYPE rep
